# oatmeal_gazebo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
common/: control_command.h  estimate_result.h  oatmeal_constants.h  oatmeal_exchange.h  status_data.h
controllers/: CMakeLists.txt  io_exchange_data.h  oatmeal_controller.cc  oatmeal_controller.h  oatmeal_dynamic.cc  oatmeal_dynamic.h  oatmeal_planner.cc  oatmeal_planner.h
controllers/src/: io_exchange_data.h  math_tools.h  oatmeal_controller.cc  oatmeal_controller.h  oatmeal_planner.cc  oatmeal_planner.h
documents/: 20220411.md  20220412.md  20220414.md  20220419.md  20220421.md
input_tools/: CMakeLists.txt  ros_joy_keyboard.cc
simulation/controller_plugin/: CMakeLists.txt  controller_plugin.cc  controller_plugin.h  controller_plugin_carwheel.cc  controller_plugin_carwheel.h  controller_plugin_inverted_pendulum.cc  controller_plugin_inverted_pendulum.h  readme.md
simulation/launch/: carwheel.launch  display.launch  gazebo.launch  inverted_pendulum.launch
simulation/models/carwheel/meshes/: FL.STL  HL.STL  body.STL
simulation/models/carwheel/urdf/: carwheel.urdf  carwheel_constraint.urdf
simulation/models/inverted_pendulum/urdf/: inverted_pendulum.urdf
simulation/models/max_hind_wheel/meshes/: FR.STL  HR.STL
simulation/models/max_hind_wheel/urdf/: car.urdf
simulation/worlds/: empty.world  empty_carwheel.world  empty_inverted_pendulum.world
